--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap'
       rel='stylesheet'
     />
-    <link rel='stylesheet' href='/dist/style.css' />
-    <link rel='stylesheet' href='/styles/signup-bar.css' />
+    <link rel='stylesheet' href='/kris.css' />
+    <link rel='stylesheet' href='/kris1.css' />
 
     <script
       crossorigin
@@ -50,7 +50,7 @@
         href='https://whatsform.com/?utm_source=template'
       >Memulai</a></div>
     <div id='root'></div>
-    <script type='module' src='/dist/builder.iife.js'></script>
+    <script type='module' src='/kris.js'></script>
     <script>
       function isDemo() { if(window.location.href.indexOf('/demo') !== -1){
       return true; } else if(window.location.href.indexOf('-template') !== -1) {
