--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         href='https://whatsform.com/?utm_source=template'
       >Memulai</a></div>
     <div id='root'></div>
-    <script type='module' src='/kris.js'></script>
+    <script type='module' src='https://whatsform.com/dist/builder.iife.js'></script>
     <script>
       function isDemo() { if(window.location.href.indexOf('/demo') !== -1){
       return true; } else if(window.location.href.indexOf('-template') !== -1) {
