--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
     </script>
   </head>
   <body>
-    <div id='signup-bar'>Buat form seperti ini & Dapatkan data langsung dari nomor WhatsApp pelanggan
-      <a
-        class='ant-btn ant-btn-primary'
-        href='https://whatsform.com/?utm_source=template'
-      >Memulai</a></div>
+    <div id='signup-bar'>Buat form seperti ini </div>
     <div id='root'></div>
     <script type='module' src='https://whatsform.com/dist/builder.iife.js'></script>
     <script>
