--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js' type='text/javascript'></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+<script src='/kris.js' type='text/javascript'></script>
+<link rel="stylesheet" href="/kris.css" />
 <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@700&display=swap" rel="stylesheet"/>
 </head>
 
