--- a/tes.html
+++ b/tes.html
@@ -3,6 +3,62 @@
       type="text/javascript"
       src="https://omdropship.github.io/kris/w.js"
     ></script> 
+<div class="poptamv open" id="checkoutWhatsApp">
+<div class="wrap" style="max-width:550px!important;">
+<h3 class="title">
+<span class="title-content"><i class="icon ion-logo-whatsapp"></i><b>Beli</b> via WhatsApp!</span>
+<a class="closeTamv" href="javascript:void(0);">×</a>
+</h3>
+<div class="content">
+<div class="poptamv-wrap">
+<div class="productCheckoutInfo">
+<div class="info">
+<h3 class="infoTitle">CD-Transparent Case</h3>
+<div class="productOptionInfo"><small><span class="waText">*</span>Varian<span class="waText">*</span></small><small class="val-Varian"> : <b>Varian 1</b><span class="waText">%0A</span></small><small><span class="waText">*</span>Warna<span class="waText">*</span></small><small class="val-Warna"> : <b>White</b><span class="waText">%0A</span></small><small><span class="waText">*</span>Qty<span class="waText">*</span></small><small class="val-Qty"> : <b class="qty">1</b><span class="waText">%0A</span></small></div>
+<hr style="margin:10px 0;">
+<span class="totalqty"><span class="waText">*</span><small>Sub-Total :</small><br><span class="waText">*%20</span>
+<b class="total">Rp. 28.000</b>
+</span><br>
+<small class="ongkir"><i>* Belum termasuk <b>Ongkos kirim</b></i></small>
+</div>
+<div class="img">
+<img src="https://lh3.googleusercontent.com/-jHe2wuOdFCE/Xfj7ONEcfQI/AAAAAAAAG4o/DgXhVTSdTQkRa_dRMGTh265AQt_nIL_ugCLcBGAsYHQ/w100-h100-c/Plastic-CD-Mockup-3.jpg">
+</div>
+</div>
+<div class="formtamv formWA">
+
+<label class="item">
+<i class="icon ion-ios-arrow-down"></i>
+<select class="pembayaran wajib" placeholder="Metode Pembayaran">
+<option hidden="hidden" selected="selected" value="default">Metode Pembayaran</option>
+<optgroup label="Metode Pembayaran"><option value="Transfer BCA%0A4371278065 A/n. Rian Nurherdian">Transfer BCA - 4371278065 A/n. Rian Nurherdian</option><option value="Paypal%0Akangrian14@gmail.com">Paypal - kangrian14@gmail.com</option></optgroup>
+</select>
+<span class="validasi"><b>Metode Pembayaran</b> (dibutuhkan)</span></label>
+<br>
+<div class="grid-wa col2">
+<label class="item">
+<i class="icon ion-md-contact"></i>
+<input class="nama wajib" placeholder="Nama Lengkap" type="text">
+<span class="validasi"><b>Nama Lengkap</b> (dibutuhkan)</span></label>
+<label class="item">
+<i class="icon ion-md-phone-portrait"></i>
+<input class="wajib hp" placeholder="No. HP ( Aktif ).." type="tel">
+<span class="validasi"><b>No. HP ( Aktif )..</b> (dibutuhkan)</span></label>
+</div>
+<br>
+<label class="item">
+<i class="icon ion-md-home"></i>
+<textarea class="alamat wajib" placeholder="Alamat Lengkap"></textarea>
+<span class="validasi"><b>Alamat Lengkap</b> (dibutuhkan)</span></label>
+<label class="item">
+<i class="icon ion-md-create"></i>
+<textarea class="catatan" placeholder="Catatan ( Jika ada )"></textarea>
+</label><a class="submit"><i class="icon ion-md-send"></i> Kirim</a>
+</div>
+</div>
+</div>
+</div>
+</div>
 
 <div class="remove_element" style="background: lightgray; border: 1px solid lightgray; font-family: Roboto, sans-serif; font-size: 90%; margin: 0px; max-width: 88%; padding: 20px; text-align: center;">Photo</div>
 <figure class="productPhoto remove_style" style="border: 1px solid lightgray; margin: 0px 0px 20px; max-width: 88%; overflow: hidden; padding: 20px;text-align: center;">
