--- a/tes.html
+++ b/tes.html
@@ -20,7 +20,7 @@
     <!-- custom css not required to work with plugin -->
     <link
       rel="stylesheet"
-      href="./static-assets/lw-jquery-whatsapp-any-form/css/custom.css?ver=1624287567"
+      href="https://whatsapp-any-form-demo.livelyworks.net/static-assets/lw-jquery-whatsapp-any-form/css/custom.css?ver=1624287567"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="./static-assets/ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./static-assets/ico/favicon-32x32.png">
