--- a/tes.html
+++ b/tes.html
@@ -157,7 +157,7 @@
       src="static-assets/packages/jquery.validate.min.js"
     ></script>
     <!-- plugin  -->
-    <script src="./static-assets/lw-jquery-whatsapp-any-form/js/lw-jquery-whatsapp-any-form.js?ver=1624287567"></script>
+    <script src="https://whatsapp-any-form-demo.livelyworks.net/static-assets/lw-jquery-whatsapp-any-form/js/lw-jquery-whatsapp-any-form.js?ver=1624287567"></script>
     <script>
       (function ($) {
         "use strict";
