--- a/tes.html
+++ b/tes.html
@@ -166,11 +166,11 @@
         // in below example form class has been used to initialize plugin for the form
           $(".lw-whatsapp-form").whatsAppAnyForm({
             // Your Mobile Number with 0 and country code
-            whatsAppNumber: "6285785214622",
+            whatsAppNumber: "085785214622",
             // if you want to open whatsapp request as new window
             openInNewWindow: true,
             // message once the user redirected to WhatsApp - Form will be replaced with this HTML text
-            submissionMessage: "You have been redirected to the W2462hatsApp to submit the message. <br/> We will get back to you soon!! <br/> <br/> Thank you"
+            submissionMessage: "You have been redirected to the WhatsApp to submit the message. <br/> We will get back to you soon!! <br/> <br/> Thank you"
           });
         });
       })(jQuery);
