--- a/page.html
+++ b/page.html
@@ -159,8 +159,13 @@ img {
   </div><!--.gallery-->
   <!-- Gallery -->
   
- </div><!--.container-->
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
+ </div><!--.container--> <div class="container">
+
+ <div class="gallery__thumbs">hrgateeedd</div>
+   
+   
+   </div>
+   <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
