--- a/page.html
+++ b/page.html
@@ -163,17 +163,25 @@ img {
   
  </div><!--.container--> <div class="container">
    <div class="card">
-  <div class="card-header">
-    Featured
-  </div>
+  <h5 class="card-header bg-success text-white">Featured</h5>
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-   
    </div>
+   
+   
+    <div class="fixed-bottom">
+   
+   <nav aria-label="Page navigation example">
+  <ul class="pagination">
+   <li class="page-item"><a class="page-link" href="#">1</a></li>
+   <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+  </ul></nav>
+    </div>
+   
    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
