--- a/page.html
+++ b/page.html
@@ -163,11 +163,31 @@ img {
   
  </div><!--.container--> <div class="container">
    <div class="card">
-  <h5 class="card-header bg-success text-white">Featured</h5>
+  <h5 class="card-header bg-success text-white">Detail produk</h5>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Hello everyone</h5>
+    <p class="card-text">Selamat datang di Toko Kami Brand 
+ terpercaya yang menjual sepatu 
+ berkualitas dan nyaman digunakan 
+ dengan harga terjangkau.
+
+ Semua model sepatu
+ selalu kami seleksi sebelum di 
+ kirimkan ke pembeli, untuk menjaga 
+ kualitas dari produk2 kami. 
+
+ Jadwal Pengiriman
+ Hari Senin-Sabtu
+
+ Order sebelum jam 15.00 WIB akan 
+ diproses dihari yang sama. 
+ Order melewati jam 15.00 WIB 
+ akan diproses dihari selanjutnya.
+
+ Hari minggu dan tanggal merah libur, 
+ tidak ada pengiriman. 
+ Update resi maksimal 1x24jam setelah 
+ paket dipickup pihak ekspedisi.</a>
   </div>
 </div>
    </div>
