--- a/page.html
+++ b/page.html
@@ -166,7 +166,9 @@ img {
   <h5 class="card-header bg-success text-white">Detail produk</h5>
   <div class="card-body">
     <h5 class="card-title">Hello everyone</h5>
-    <p class="card-text">Selamat datang di Toko Kami Brand 
+    <p class="card-text">
+<footer class="blockquote-footer">
+Selamat datang di Toko Kami Brand 
  terpercaya yang menjual sepatu 
  berkualitas dan nyaman digunakan 
  dengan harga terjangkau.
@@ -187,7 +189,8 @@ img {
  Hari minggu dan tanggal merah libur, 
  tidak ada pengiriman. 
  Update resi maksimal 1x24jam setelah 
- paket dipickup pihak ekspedisi.</a>
+ paket dipickup pihak ekspedisi
+</footer>
   </div>
 </div>
    </div>
