--- a/page.html
+++ b/page.html
@@ -161,7 +161,11 @@ img {
   </div><!--.gallery-->
   <!-- Gallery -->
   
- </div><!--.container--> <div class="container">
+ </div><!--.container-->
+
+<iframe src="https://whatsform.com/G3lGuZ"  width="100%" height="600" frameBorder="0"></iframe>
+
+ <div class="container">
    <div class="card">
   <h5 class="card-header bg-success text-white">Detail produk</h5>
   <div class="card-body">
