--- a/page.html
+++ b/page.html
@@ -162,9 +162,10 @@ img {
   <!-- Gallery -->
   
  </div><!--.container-->
-<div class="container">
-<iframe src="https://whatsform.com/G3lGuZ"  width="100%" height="600" frameBorder="0"></iframe>
+<div class="container"><div class="gallery__thumbs">
 
+<iframe src="https://whatsform.com/G3lGuZ"  width="100%" height="600" frameBorder="0"></iframe>
+</div>
    <div class="card">
   <h5 class="card-header bg-success text-white">Detail produk</h5>
   <div class="card-body">
