--- a/page.html
+++ b/page.html
@@ -200,15 +200,22 @@ Selamat datang di Toko Kami Brand
    </div>
    
    
-    <div class="fixed-bottom">
-   
-   <nav aria-label="Page navigation example">
-  <ul class="pagination">
-   <li class="page-item"><a class="page-link" href="#">1</a></li>
-   <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-  </ul></nav>
-    </div>
-   
+<style>
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+</style>
+
+<div class="footer">
+  <p>Footer</p>
+</div>
+
    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
