--- a/page.html
+++ b/page.html
@@ -206,14 +206,17 @@ Selamat datang di Toko Kami Brand
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
+  background-color:;
   color: white;
   text-align: center;
 }
 </style>
 
 <div class="footer">
-  <p>Footer</p>
+  <p><div class="row">
+  <div class="col">col</div>
+  <div class="col-8">col-4</div>
+</div></p>
 </div>
 
    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
