--- a/page.html
+++ b/page.html
@@ -177,6 +177,12 @@ Selamat datang di Toko Kami Brand
  berkualitas dan nyaman digunakan 
  dengan harga terjangkau.
 
+- Desain Kece Abis
+- Sol Kuat
+- Bahan Mess Berkualitas
+- Fleksibel dan anti selip
+- Bahan Atas terbuat dari Canvas yang berpori sehingga ada sirkulasi udara sehingga kaki tidak bau walaupun dipakai seharian.
+
  Semua model sepatu
  selalu kami seleksi sebelum di 
  kirimkan ke pembeli, untuk menjaga 
@@ -206,7 +212,7 @@ Selamat datang di Toko Kami Brand
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color:;
+  background-color:black;
   color: white;
   text-align: center;
 }
