--- a/page.html
+++ b/page.html
@@ -203,6 +203,19 @@ Selamat datang di Toko Kami Brand
 </footer>
   </div>
 </div>
+
+<div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+
    </div>
    
    
