--- a/page.html
+++ b/page.html
@@ -234,7 +234,7 @@ Selamat datang di Toko Kami Brand
 <div class="footer">
   <p><div class="row">
   <div class="col">col</div>
-  <div class="col-8">col-4</div>
+  <div class="col-9">Chat via WhatsApp</div>
 </div></p>
 </div>
 
