--- a/page.html
+++ b/page.html
@@ -162,10 +162,19 @@ img {
   <!-- Gallery -->
   
  </div><!--.container-->
-<div class="container"><div class="gallery__thumbs">
 
-<iframe src="https://whatsform.com/G3lGuZ"  width="100%" height="600" frameBorder="0"></iframe>
-</div>
+
+<div class="my-3 p-3 bg-body rounded shadow-sm">
+    <h6 class="border-bottom pb-2 mb-0">Recent updates</h6>
+    <div class="d-flex text-muted pt-3">
+      <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+
+      <p class="pb-3 mb-0 small lh-sm border-bottom">
+        <strong class="d-block text-gray-dark">@username</strong>
+        Some representative placeholder content, with some information about this user. Imagine this being some sort of status update, perhaps?
+      </p>
+    </div>
+
    <div class="card">
   <h5 class="card-header bg-success text-white">Detail produk</h5>
   <div class="card-body">
