--- a/page.html
+++ b/page.html
@@ -172,7 +172,10 @@ img {
         Selamat datang di Toko Kami Brand 
  terpercaya yang menjual sepatu 
  berkualitas dan nyaman digunakan 
- dengan harga terjangkau.<br/>
+ dengan harga terjangkau.<br/><br/>
+
+<h6 class="border-bottom pb-2 mb-0">Detail produk  </h6>
+   
 
 - Desain Kece Abis
 - Sol Kuat
