--- a/page.html
+++ b/page.html
@@ -165,8 +165,8 @@ img {
 <div class="my-3 p-3 bg-body rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">Detail produk  </h6>
     <div class="d-flex text-muted pt-3">
-      <img src="https://img.icons8.com/cotton/64/000000/note--v2.png"/>   <p class="pb-3 mb-0 small lh-sm border-bottom">
-        <strong class="d-block text-gray-dark">Hello everyone</strong>
+      <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+     <strong class="d-block text-gray-dark">Hello everyone</strong>
         Selamat datang di Toko Kami Brand 
  terpercaya yang menjual sepatu 
  berkualitas dan nyaman digunakan 
@@ -174,12 +174,12 @@ img {
 
 
 
-- Desain Kece Abis
-- Sol Kuat
-- Bahan Mess Berkualitas
-- Fleksibel dan anti selip
+- Desain Kece Abis<br/>
+- Sol Kuat<br/>
+- Bahan Mess Berkualitas<br/>
+- Fleksibel dan anti selip<br/>
 - Bahan Atas terbuat dari Canvas yang berpori sehingga ada sirkulasi udara sehingga kaki tidak bau walaupun dipakai seharian.
-
+<br/><br/>
  Semua model sepatu
  selalu kami seleksi sebelum di 
  kirimkan ke pembeli, untuk menjaga 
