--- a/page.html
+++ b/page.html
@@ -186,15 +186,16 @@ img {
  selalu kami seleksi sebelum di 
  kirimkan ke pembeli, untuk menjaga 
  kualitas dari produk2 kami. 
-
- Jadwal Pengiriman
+<br/>
+<strong class="d-block text-gray-dark">Jadwal Pengiriman</strong>
+  <br/>
  Hari Senin-Sabtu
-
+<br/>
  Order sebelum jam 15.00 WIB akan 
  diproses dihari yang sama. 
  Order melewati jam 15.00 WIB 
  akan diproses dihari selanjutnya.
-
+<br/><br/>
  Hari minggu dan tanggal merah libur, 
  tidak ada pengiriman. 
  Update resi maksimal 1x24jam setelah 
