--- a/page.html
+++ b/page.html
@@ -207,7 +207,7 @@ img {
 <script async src="https://whatsform.com/launcher.js"></script>
 <script> 
 window.whatsformId = 'DmXezK';
-window.whatsformMessage = 'Message on WhatsApp';
+window.whatsformMessage = 'Pesan via WhatsApp';
 </script>
                 
 
