--- a/page.html
+++ b/page.html
@@ -140,20 +140,19 @@ img {
     <div class="gallery__hero">
       <a href="" class="gallery__hero-enlarge ir" data-gallery="zoom">Zoom</a>
 
-      <img src="https://public-619e3.firebaseapp.com/Product-Gallery/products/normal/product-01_view-01.jpg">
+      <img src="https://omdropship.github.io/kris/img/1.jpg ">
     </div>
     <!--Gallery Hero-->
 
     <!--Gallery Thumbs-->
     <div class="gallery__thumbs">
-        <a href="https://public-619e3.firebaseapp.com/Product-Gallery/products/normal/product-01_view-01.jpg" data-gallery="thumb" class="is-active">
-          <img src="https://public-619e3.firebaseapp.com/Product-Gallery/products/thumb/product-01_view-01.jpg">
+        <a href="https://omdropship.github.io/kris/img/2.jpg" data-gallery="thumb" class="is-active">
+          <img src="https://omdropship.github.io/kris/img/2.jpg">
         </a>
-        <a href="https://public-619e3.firebaseapp.com/Product-Gallery/products/normal/product-01_view-02.jpg" data-gallery="thumb">
-          <img src="https://public-619e3.firebaseapp.com/Product-Gallery/products/thumb/product-01_view-02.jpg">
-        </a>
-        <a href="https://public-619e3.firebaseapp.com/Product-Gallery/products/normal/product-01_view-03.jpg" data-gallery="thumb">
-          <img src="https://public-619e3.firebaseapp.com/Product-Gallery/products/thumb/product-01_view-03.jpg">
+        <a href="https://omdropship.github.io/kris/img/2.jpg" data-gallery="thumb">
+          <img src="https://omdropship.github.io/kris/img/2.jpg">
+        <a href="https://omdropship.github.io/kris/img/a3.jpg" data-gallery="thumb">
+          <img src="https://omdropship.github.io/kris/img/a3.jpg">
         </a>
     </div>
     <!--Gallery Thumbs-->
