--- a/page.html
+++ b/page.html
@@ -206,13 +206,13 @@ img {
     <div class="row">
       <div class="col-lg-3 mb-3">
         <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="Bootstrap">
-         <img src="img/logo_1_original.png" width="60" height="60"/>
-           <span class="fs-5">Toko Amanda</span>
+         <img src="img/logo_1_original.png" width="50" height="50"/>
+           <span class="fs-5"><b>Toko Amanda</b></span>
         </a>
         <ul class="list-unstyled small text-muted">
-          <li class="mb-2">Jl.Malik ibrahim Rt/rw 002/009</li>
-          <li class="mb-2">Code licensed <a href="https://github.com/twbs/bootstrap/blob/main/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.</li>
-          <li class="mb-2">Currently v5.1.3.</li>
+          <li class="mb-2">No Tlpn/WhatsApp: 0898643</li>
+<li class="mb-2">Jl.Malik ibrahim Rt/rw 002/009</li>
+           <li class="mb-2">Sedati-Sidoarjo</li>
         </ul>
       </div></footer>
 
