--- a/page.html
+++ b/page.html
@@ -202,19 +202,15 @@ img {
  
    
 <footer class="bd-footer py-5 mt-5 bg-light">
-  <div class="container py-5">
-    <div class="row">
-      <div class="col-lg-3 mb-3">
-        <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="Bootstrap">
          <img src="img/logo_1_original.png" width="50" height="50"/>
            <span class="fs-5"><b>Toko Amanda</b></span>
-        </a>
+        
         <ul class="list-unstyled small text-muted">
           <li class="mb-2">No Tlpn/WhatsApp: 0898643</li>
 <li class="mb-2">Jl.Malik ibrahim Rt/rw 002/009</li>
            <li class="mb-2">Sedati-Sidoarjo</li>
         </ul>
-      </div></footer>
+     </footer>
 
    </div>
    
