--- a/page.html
+++ b/page.html
@@ -198,8 +198,10 @@ img {
  tidak ada pengiriman. 
  Update resi maksimal 1x24jam setelah 
  paket dipickup pihak ekspedisi      </p>
+
     </div>
- 
+ <img src="img/tombol.png" width="200" height="70"/>
+       
    
 <footer class="bd-footer py-5 mt-5 bg-light">
          <img src="img/logo_1_original.png" width="50" height="50"/>
