--- a/page.html
+++ b/page.html
@@ -200,8 +200,10 @@ img {
  paket dipickup pihak ekspedisi      </p>
 
     </div>
- <img src="img/tombol.png" width="200" height="70"/>
-       
+<br/><br/><center>
+<a href="https://wa.me/6281381224389">
+ <img src="img/tombol.png" width="250" height="70"/>
+       </a></center>
    
 <footer class="bd-footer py-5 mt-5 bg-light">
          <img src="img/logo_1_original.png" width="50" height="50"/>
