--- a/page.html
+++ b/page.html
@@ -208,7 +208,7 @@ img {
 <footer class="bd-footer py-5 mt-5 bg-light">
          <img src="img/logo_1_original.png" width="50" height="50"/>
            <span class="fs-5"><b>Toko Amanda</b></span>
-        
+    <br/> <br/>  <img src="img/expedisi.png"><br/>
         <ul class="list-unstyled small text-muted">
           <li class="mb-2">No Tlpn/WhatsApp: 0898643</li>
 <li class="mb-2">Jl.Malik ibrahim Rt/rw 002/009</li>
