--- a/page.html
+++ b/page.html
@@ -204,12 +204,14 @@ img {
 <a href="https://wa.me/6281381224389">
  <img src="img/tombol.png" width="250" height="70"/>
        </a></center>
-   
+   <span class="fs-5"><b>Support Expedisi</b></span>
+    <br/> <br/>  <img src="img/expedisi.png"><br/>
+       
 <footer class="bd-footer py-5 mt-5 bg-light">
          <img src="img/logo_1_original.png" width="50" height="50"/>
            <span class="fs-5"><b>Toko Amanda</b></span>
-    <br/> <br/>  <img src="img/expedisi.png"><br/>
-        <ul class="list-unstyled small text-muted">
+    
+ <ul class="list-unstyled small text-muted">
           <li class="mb-2">No Tlpn/WhatsApp: 0898643</li>
 <li class="mb-2">Jl.Malik ibrahim Rt/rw 002/009</li>
            <li class="mb-2">Sedati-Sidoarjo</li>
