--- a/page.html
+++ b/page.html
@@ -132,7 +132,9 @@ img {
 
 <body translate="no" >
   <div class="container">
-
+<center>
+   <span class="fs-5"><b>Tampil Keren, Mewah & Stylish</b></span>
+    <br/></center>
   <!-- Gallery -->
   <div id="js-gallery" class="gallery">
 
