--- a/page.html
+++ b/page.html
@@ -191,6 +191,14 @@ img {
 <strong class="d-block text-gray-dark">Jadwal Pengiriman</strong>
  Hari Senin-Sabtu
 <br/>
+
+<ul class="list-group list-group-flush">
+  <li class="list-group-item">An item</li>
+  <li class="list-group-item">A second item</li>
+  <li class="list-group-item">A third item</li>
+  <li class="list-group-item">A fourth item</li>
+  <li class="list-group-item">And a fifth one</li>
+</ul>
  Order sebelum jam 15.00 WIB akan 
  diproses dihari yang sama. 
  Order melewati jam 15.00 WIB 
