--- a/page.html
+++ b/page.html
@@ -191,14 +191,15 @@ img {
 <strong class="d-block text-gray-dark">Jadwal Pengiriman</strong>
  Hari Senin-Sabtu
 <br/>
+<strong class="d-block text-gray-dark">
+Spesifikasi Ukuran Sepatu Maloch</strong><br/>
+✓ Ukuran 38 : 24 cm<br/>
+✓ Ukuran 39 : 24,5 cm<br/>
+✓ Ukuran 40 : 25,5 cm<br/>
+✓ Ukuran 41 : 26 cm<br/>
+✓ Ukuran 42 : 26,5 cm<br/>
+✓ Ukuran 43 : 27 cm<br/>
 
-<ul class="list-group list-group-flush">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A fourth item</li>
-  <li class="list-group-item">And a fifth one</li>
-</ul>
  Order sebelum jam 15.00 WIB akan 
  diproses dihari yang sama. 
  Order melewati jam 15.00 WIB 
