--- a/page.html
+++ b/page.html
@@ -174,23 +174,15 @@ img {
  terpercaya yang menjual sepatu 
  berkualitas dan nyaman digunakan 
  dengan harga terjangkau.<br/><br/>
-
-
-
-- Desain Kece Abis<br/>
-- Sol Kuat<br/>
-- Bahan Mess Berkualitas<br/>
-- Fleksibel dan anti selip<br/>
-- Bahan Atas terbuat dari Canvas yang berpori sehingga ada sirkulasi udara sehingga kaki tidak bau walaupun dipakai seharian.
+<strong class="d-block text-gray-dark">
+Spesifikasi Sepatu </strong><br/>
+✓ Model Terbaru & Kekinian<br/>
+✓ Fleksibel dan anti selip<br/>
+✓ Sol Kuat Dan Rapih<br/>
+✓ Ringan & Empuk Dipakai<br/>
+✓ Jahitan : Kuat dan Rapih<br/>
+✓ Bahan Atas terbuat dari Canvas yang berpori sehingga ada sirkulasi udara sehingga kaki tidak bau walaupun dipakai seharian.
 <br/><br/>
- Semua model sepatu
- selalu kami seleksi sebelum di 
- kirimkan ke pembeli, untuk menjaga 
- kualitas dari produk2 kami. 
-<br/><br/>
-<strong class="d-block text-gray-dark">Jadwal Pengiriman</strong>
- Hari Senin-Sabtu
-<br/>
 <strong class="d-block text-gray-dark">
 Spesifikasi Ukuran Sepatu Maloch</strong><br/>
 ✓ Ukuran 38 : 24 cm<br/>
@@ -200,6 +192,14 @@ Spesifikasi Ukuran Sepatu Maloch</strong><br/>
 ✓ Ukuran 42 : 26,5 cm<br/>
 ✓ Ukuran 43 : 27 cm<br/>
 
+ Semua model sepatu
+ selalu kami seleksi sebelum di 
+ kirimkan ke pembeli, untuk menjaga 
+ kualitas dari produk2 kami. 
+<br/><br/>
+<strong class="d-block text-gray-dark">Jadwal Pengiriman</strong>
+ Hari Senin-Sabtu
+<br/>
  Order sebelum jam 15.00 WIB akan 
  diproses dihari yang sama. 
  Order melewati jam 15.00 WIB 
