--- a/page.html
+++ b/page.html
@@ -211,9 +211,19 @@ Spesifikasi Ukuran Sepatu Maloch</strong><br/>
  paket dipickup pihak ekspedisi      </p>
 
     </div>
-<br/><br/><center>
+<br/><center> <img src="
+img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"/></center>
+<br/>HARGA NORMAL
+
+Rp. 300.000,-
+
+KHUSUS HARI INI
+
+Rp. 170 Ribu
+
+<br/><center>
 <a href="https://wa.me/6281381224389">
- <img src="img/tombol.png" width="250" height="70"/>
+ <img src="img/tombol.png" width="200" height="50"/>
        </a></center>
    <span class="fs-5"><b>Support Expedisi</b></span>
     <br/> <br/>  <img src="img/expedisi.png"><br/>
