--- a/page.html
+++ b/page.html
@@ -213,13 +213,13 @@ Spesifikasi Ukuran Sepatu Maloch</strong><br/>
     </div>
 <br/><center> <img src="
 img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"/></center>
-<br/>HARGA NORMAL
-
-Rp. 300.000,-
-
+<br/><b>HARGA NORMAL
+<span style="text-decoration: line-through red;">
+Rp 150.000,-
+</span>
 KHUSUS HARI INI
 
-Rp. 170 Ribu
+Rp 65 Ribu</b>
 
 <br/><center>
 <a href="https://wa.me/6281381224389">
