--- a/page.html
+++ b/page.html
@@ -184,14 +184,14 @@ Spesifikasi Sepatu </strong><br/>
 ✓ Bahan Atas terbuat dari Canvas yang berpori sehingga ada sirkulasi udara sehingga kaki tidak bau walaupun dipakai seharian.
 <br/><br/>
 <strong class="d-block text-gray-dark">
-Spesifikasi Ukuran Sepatu Maloch</strong><br/>
+Spesifikasi Ukuran Sepatu </strong><br/>
 ✓ Ukuran 38 : 24 cm<br/>
 ✓ Ukuran 39 : 24,5 cm<br/>
 ✓ Ukuran 40 : 25,5 cm<br/>
 ✓ Ukuran 41 : 26 cm<br/>
 ✓ Ukuran 42 : 26,5 cm<br/>
 ✓ Ukuran 43 : 27 cm<br/>
-
+<br/>
  Semua model sepatu
  selalu kami seleksi sebelum di 
  kirimkan ke pembeli, untuk menjaga 
@@ -212,21 +212,21 @@ Spesifikasi Ukuran Sepatu Maloch</strong><br/>
 
     </div>
 <br/><center> <img src="
-img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"/></center>
+img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="30" /></center>
 <br/><b>HARGA NORMAL
 <span style="text-decoration: line-through red;">
 Rp 150.000,-
-</span>
+</span><br/>
 KHUSUS HARI INI
 
-Rp 65 Ribu</b>
+Rp <b>65.000</b></b>
 
 <br/><center>
 <a href="https://wa.me/6281381224389">
  <img src="img/tombol.png" width="200" height="50"/>
-       </a></center>
+       </a></center><br/> 
    <span class="fs-5"><b>Support Expedisi</b></span>
-    <br/> <br/>  <img src="img/expedisi.png"><br/>
+    <br/>  <img src="img/expedisi.png"><br/>
        
 <footer class="bd-footer py-5 mt-5 bg-light">
          <img src="img/logo_1_original.png" width="50" height="50"/>
