--- a/page.html
+++ b/page.html
@@ -212,7 +212,7 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 
     </div>
 <br/><center> <img src="
-img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="30" /></center>
+img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="50" />
 <br/><b>HARGA NORMAL
 <span style="text-decoration: line-through red;">
 Rp 150.000,-
@@ -220,7 +220,7 @@ Rp 150.000,-
 KHUSUS HARI INI
 
 Rp <b>65.000</b></b>
-
+</center>
 <br/><center>
 <a href="https://wa.me/6281381224389">
  <img src="img/tombol.png" width="200" height="50"/>
