--- a/page.html
+++ b/page.html
@@ -213,7 +213,9 @@ Spesifikasi Ukuran Sepatu </strong><br/>
     </div>
 <br/><center> <img src="
 img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="50" />
-<br/><b>HARGA NORMAL
+<br/><span class="fs-5"><b>
+PESAN SEKARANG UNTUK MENDAPATKAN DISKON 50%</br>
+<b>HARGA NORMAL
 <span style="text-decoration: line-through red;">
 Rp 150.000,-
 </span><br/>
