--- a/page.html
+++ b/page.html
@@ -213,15 +213,17 @@ Spesifikasi Ukuran Sepatu </strong><br/>
     </div>
 <br/><center> <img src="
 img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="50" />
-<br/><span class="fs-5"><b>
+<br/><span class="fs-5">
 PESAN SEKARANG UNTUK MENDAPATKAN DISKON 50%</br>
-<b>HARGA NORMAL
+HARGA NORMAL
 <span style="text-decoration: line-through red;">
 Rp 150.000,-
 </span><br/>
 KHUSUS HARI INI
 
-Rp <b>65.000</b></b>
+Rp 65.000
+<br/>
+BISA BAYAR DI RUMAH (COD)</span>
 </center>
 <br/><center>
 <a href="https://wa.me/6281381224389">
