--- a/page.html
+++ b/page.html
@@ -211,6 +211,9 @@ Spesifikasi Ukuran Sepatu </strong><br/>
  paket dipickup pihak ekspedisi      </p>
 
     </div>
+</div>
+<li class="list-group-item list-group-item-info">
+  
 <br/><center> <img src="
 img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="50" />
 <br/><span class="fs-5">
@@ -243,7 +246,7 @@ BISA BAYAR DI RUMAH (COD)</span>
         </ul>
      </footer>
 
-   </div>
+   </li>
    
 <script async src="https://whatsform.com/launcher.js"></script>
 <script> 
