--- a/page.html
+++ b/page.html
@@ -212,11 +212,11 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 
     </div>
 </div>
-<li class="list-group-item list-group-item-info">
-  
+<li class="list-group-item list-group-item-dark">
+  <font color="white">
 <br/><center> <img src="
 img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="50" />
-<br/><span class="fs-5">
+<br/><span class="fs-5"><b>
 PESAN SEKARANG UNTUK MENDAPATKAN DISKON 50%</br>
 HARGA NORMAL
 <span style="text-decoration: line-through red;">
@@ -226,7 +226,7 @@ KHUSUS HARI INI
 
 Rp 65.000
 <br/>
-BISA BAYAR DI RUMAH (COD)</span>
+BISA BAYAR DI RUMAH (COD)</b></span></font>
 </center>
 <br/><center>
 <a href="https://wa.me/6281381224389">
