--- a/page.html
+++ b/page.html
@@ -212,7 +212,10 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 
     </div>
 </div>
-<li class="list-group-item list-group-item-dark">
+
+<li class="list-group-item"><b>Pesan sekarang</b></li>
+
+<li class="list-group-item list-group-item-primary">
   <font color="white">
 <br/><center> <img src="
 img/f7traQxb2thuVKf7Q02sEwlpolS1qR0qRTqMhwLsOw-2-1-1.gif"width="150" height="50" />
