--- a/page.html
+++ b/page.html
@@ -186,12 +186,12 @@ img {
   
  </div><!--.container-->
 <div class="my-3 p-3 bg-body rounded shadow-sm">
-    <h6 class="border-bottom pb-2 mb-0">Detail produk  </h6>
+    <h6 class="border-bottom pb-2 mb-0">Harga promo Rp 65.000  </h6>
     <div class="d-flex text-muted pt-3">
       <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
      <p class="pb-3 mb-0 small lh-sm border-bottom">
         
-<strong class="d-block text-gray-dark">Hello everyone</strong>
+<strong class="d-block text-gray-dark">Detail produk</strong>
         Selamat datang di Toko Kami Brand 
  terpercaya yang menjual sepatu 
  berkualitas dan nyaman digunakan 
@@ -230,7 +230,7 @@ Spesifikasi Ukuran Sepatu </strong><br/>
  Hari minggu dan tanggal merah libur, 
  tidak ada pengiriman. 
  Update resi maksimal 1x24jam setelah 
- paket dipickup pihak ekspedisi      </p>
+ paket dipickup pihak ekspedisi     <br/><br/><br/> </p>
 
     </div>
 </div>
@@ -239,9 +239,8 @@ Spesifikasi Ukuran Sepatu </strong><br/>
   <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
     <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
     <div class="d-flex gap-2 w-100 justify-content-between">
-      <div>
-        <h6 class="mb-0">List group item heading</h6>
-              </div>
+      <div><br/>
+        <strong class="d-block text-gray-dark">Pesan sekarang</strong>    </div>
    </div>
 <style>
 .footer {
