--- a/page.html
+++ b/page.html
@@ -234,23 +234,21 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 
     </div>
 </div>
-<div class="footer">
+
+    
+    <div class="fixed-bottom">
+
+
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
     <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
     <div class="d-flex gap-2 w-100 justify-content-between">
-      <div><br/>
-        <strong class="d-block text-gray-dark">Pesan sekarang</strong>    </div>
-   </div>
-<style>
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-}
-</style>
+      <div>
+        <h6 class="mb-0">Pesan sekarang</h6>
+        <p class="mb-0 opacity-40"><small class="opacity-50 text-nowrap">Harga Rp 65.000<small></p>
+      </div>
+      
+    </div>
    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
