--- a/page.html
+++ b/page.html
@@ -239,10 +239,11 @@ Spesifikasi Ukuran Sepatu </strong><br/>
     <div class="fixed-bottom">
 
 
-<div class="list-group">
+<li class="list-group-item list-group-item-primary">
+ 
   <a href="fb.com">
-    <img src="img/pesan_1_original.png" alt="twbs" width="250" height="30">
-     </a> </div>
+    <img src="img/pesan_1_original.png" alt="twbs" width="300" height="60">
+     </a> </li>
       
     </div>
    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
