--- a/page.html
+++ b/page.html
@@ -238,12 +238,15 @@ Spesifikasi Ukuran Sepatu </strong><br/>
     
     <div class="fixed-bottom">
 
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      Pesan sekarang
+    </a>
+  </div>
+</nav>
 
-<li class="list-group-item list-group-item-primary">
- 
-  <a href="fb.com">
-    <img src="img/pesan_1_original.png" alt="twbs" width="100" height="40">
-     </a> </li>
       
     </div>
    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
