--- a/page.html
+++ b/page.html
@@ -242,9 +242,7 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
- 
-
-<span class="material-icons" "d-inline-block align-text-top"></span>
+ <img src="https://www.svgrepo.com/show/71430/shopping-basket.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
       Pesan sekarang
     </a>
   </div>
