--- a/page.html
+++ b/page.html
@@ -242,8 +242,8 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
- <img src="https://www.svgrepo.com/show/71430/shopping-basket.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-      Pesan sekarang
+ <img src="https://www.svgrepo.com/show/10230/shopping-cart.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      <b><small>Pesan sekarang</small></b>
     </a>
   </div>
 </nav>
