--- a/page.html
+++ b/page.html
@@ -155,9 +155,16 @@ img {
 
 <body translate="no" >
   <div class="container">
-<center>
-   <span class="fs-5"><b>Tampil Keren, Mewah & Stylish</b></span>
-    <br/></center>
+<center><nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="https://www.svgrepo.com/show/401638/a-button.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      <span class="fs-5"><b><small>Toko Amanda</small></b></span>
+  
+    </a>
+  </div>
+</nav>
+     <br/></center>
   <!-- Gallery -->
   <div id="js-gallery" class="gallery">
 
