--- a/page.html
+++ b/page.html
@@ -159,7 +159,7 @@ img {
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="https://www.svgrepo.com/show/401638/a-button.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-      <span class="fs-5"><b><small>Toko Amanda</small></b></span>
+      <span class="fs-5"><b><small>Toko <font color="red">Amanda</font></small></b></span>
   
     </a>
   </div>
