--- a/page.html
+++ b/page.html
@@ -191,7 +191,18 @@ img {
 
   </div><!--.gallery-->
   <!-- Gallery -->
-  
+  Tes 
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="https://www.svgrepo.com/show/28155/whatsapp.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      Klik disini <br>
+<small>untuk menghubungi kami via WhatsApp</small>
+    </a>
+  </div>
+</nav>
+
+tes
  </div><!--.container-->
 <div class="my-3 p-3 bg-body rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">Harga promo Rp 65.000  </h6><br/>⭐⭐⭐⭐⭐ | <small> Terjual 500+ </small>
