--- a/page.html
+++ b/page.html
@@ -247,7 +247,14 @@ Spesifikasi Ukuran Sepatu </strong><br/>
  Hari minggu dan tanggal merah libur, 
  tidak ada pengiriman. 
  Update resi maksimal 1x24jam setelah 
- paket dipickup pihak ekspedisi     <br/><br/><br/> </p>
+ paket dipickup pihak ekspedisi     <br/><br/>
+<strong class="d-block text-gray-dark">Lokasi</strong>
+ 
+<br/> 
+<b>Alamat:</b> Jl.Malik ibrahim rt/rw 02/06<br/><br/>
+<b>Kecamatan:</b> Sedati<br/><br/>
+<b>Kabupaten:</b> Sidoarjo-jawa timur<br/><br/>
+</p>
 
     </div>
 </div>
