--- a/page.html
+++ b/page.html
@@ -247,7 +247,7 @@ Spesifikasi Ukuran Sepatu </strong><br/>
  Hari minggu dan tanggal merah libur, 
  tidak ada pengiriman. 
  Update resi maksimal 1x24jam setelah 
- paket dipickup pihak ekspedisi     <br/><br/>
+ paket dipickup pihak ekspedisi     <br/><br/><hr/><br/>
 <strong class="d-block text-gray-dark">Lokasi</strong>
  
 <br/> 
