--- a/page.html
+++ b/page.html
@@ -251,10 +251,12 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 <strong class="d-block text-gray-dark">Lokasi</strong>
  
 <br/> 
-<b>Alamat:</b> Jl.Malik ibrahim rt/rw 02/06<br/><br/>
+<b>Alamat:</b> Jl.Malik ibrahim rt/rw 02/06<br/>
 <b>Kecamatan:</b> Sedati<br/>
 <b>Kabupaten:</b> Sidoarjo-jawa timur<br/>
 <b>No Tlpn/WhatsApp:</b> 
+<br/><br/><br/><br/>
+
 </p>
 
     </div>
@@ -266,7 +268,7 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
- <img src="https://www.svgrepo.com/show/10230/shopping-cart.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+ <img src="https://www.svgrepo.com/show/74521/shopping-cart.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
       <b><small>Pesan sekarang</small></b>
     </a>
   </div>
