--- a/page.html
+++ b/page.html
@@ -267,9 +267,9 @@ Spesifikasi Ukuran Sepatu </strong><br/>
 
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="https://whatsform.com/DmXezK">
  <img src="https://www.svgrepo.com/show/74521/shopping-cart.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-      <b><small>Pesan sekarang</small></b>
+     <font color="blue"> <b><small>Pesan sekarang</small></b></font>
     </a>
   </div>
 </nav>
