--- a/page.html
+++ b/page.html
@@ -270,7 +270,7 @@ Spesifikasi Ukuran Sepatu </strong><br/>
     <a class="navbar-brand" href="https://whatsform.com/DmXezK">
  <img src="https://www.svgrepo.com/show/74521/shopping-cart.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
      <font color="blue"> <b><small>Pesan sekarang</small></b></font>
-    </a>
+    </a><br/> <font size="2">harga Rp 65.000</font>
   </div>
 </nav>
 
